test/mutation_analysis/s0067_add_binary/hafis/ablation_o3_r50/mutants/17/result.txt
./test/mutation_analysis/s0067_add_binary/hafis/ablation_o3_r50/mutants/17/Solution.java:33: error: unreachable statement
        if (carry != 0) {
        ^
1 error
